--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --watch '**/*.ts' --ignore '**/*.spec.ts' --exec 'ts-node' index.ts",
-    "download-schema": "apollo service:download --endpoint=http://localhost:4000/ graphql-schema.json",
-    "codegen": "npm run download-schema && apollo codegen:generate --localSchemaFile=graphql-schema.json --target=typescript --tagName=gql"
+    "download-schema": "apollo-codegen introspect-schema http://localhost:4000/ --output downloaded-schema.json",
+    "codegen": "npm run download-schema && apollo-codegen generate **/*.graphql --schema downloaded-schema.json --target typescript --output graphql-schema.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/graphql": "^14.5.0",
     "@types/node": "^16.11.10",
+    "apollo-codegen": "^0.20.2",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
